@@ -1,4 +1,4 @@
-$Id: THANKS,v 1.31 2000/06/30 09:12:14 stelian Exp $
+$Id: THANKS,v 1.32 2000/08/19 22:39:35 stelian Exp $
 
 Dump and restore were written by the people of the CSRG at the University
 of California, Berkeley.
@@ -21,6 +21,7 @@ dump-0.4b5).
 Thanks to people who reported problems with the port, sent patches, and
 suggested various improvements.
 Here is a partial list of them (if I have forgotten someone, please complain):
+Stephen Atwell		satwell@urbana.css.mot.com
 Stan Bubrouski		satan@fastdial.net
 Stephen Carr		sgcarr@civeng.adelaide.edu.au
 Rob Cermak		cermak@ahab.rutgers.edu
