@@ -1,4 +1,4 @@
-$Id: CHANGES,v 1.70 2000/08/19 22:08:53 stelian Exp $
+$Id: CHANGES,v 1.71 2000/08/19 22:39:35 stelian Exp $
 
 Changes between versions 0.4b17 and 0.4b19 (released ?????????????)
 ===================================================================
@@ -8,6 +8,11 @@ Changes between versions 0.4b17 and 0.4b19 (released ?????????????)
 	hanged or segmentation faults etc). 
 
 2.	Specified the default blocksize in the dump man page.
+
+3.	Changed two info messages of restore to be written on stdout
+	instead of stderr in order to leave stderr only for errors
+	or warnings. Thanks to Stephen Atwell 
+	<satwell@urbana.css.mot.com> for the suggestion.
 
 Changes between versions 0.4b17 and 0.4b18 (released June 30, 2000)
 ===================================================================
